--- a/mos.yml
+++ b/mos.yml
@@ -1,17 +1,19 @@
-author: mongoose-os
+author: hamulyak
 type: lib
-description: An empty lib that does nothing
+description: Arduino Adafruit TCS34725 library
 version: 1.0
 
 sources:
   - src
-filesystem:
-  - fs
 config_schema:
 libs:
-
+  - origin: https://github.com/mongoose-os-libs/arduino-compat
+  - origin: https://github.com/mongoose-os-libs/arduino-wire
 tags:
+  - arduino
   - c
-  - docs:misc:Empty
+  - js
+  - hw
+  - docs:arduino:Adafruit TCS34725
 
 manifest_version: 2017-09-29
